--- a/mystyle.css
+++ b/mystyle.css
@@ -30,6 +30,10 @@ a:hover span.note {
   background-color: #CEB888;
   display:block;
   position:fixed;
-  border:10px;
+  margin-left: 60px;
   width:200px;
+}
+
+#footer {
+  background-color: #CEB888;
 }
