--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,7 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Nanum Myeongjo", serif;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
   padding: 0;
 }
@@ -7,21 +9,21 @@ body {
 header {
   height: 50px;
   text-align: center;
-  background-color: #FFB8A2;
-  background: url(/assets/images/goldheader.jpg) no-repeat center top fixed;
+  background-color: #2c7578;
+  background: url(/assets/images/moveable-type.jpg) no-repeat center top fixed;
   background-size: cover;
 }
 
 footer {
   height: 75px;
   text-align: center;
-  background-color: #782F40;
+  background-color: #2c7578;
   color: #FFFFFF;
   padding: 1em;
 }
 
 footer a {
-  color: #CEB888;
+  color: #782f2c;
 }
  
  h1 {
@@ -35,24 +37,11 @@ footer a {
 }
 
 a {
-  color:#782F40;
+  color:#2c7578;
 }
 
 .container {
   padding: 50px;
-}
-
-.preview {
-  width: 200px;
-  height:auto;
-  float:left;
-  padding: 30px;
-  clear:left;
-}
-
-.description {
-  padding: 20px;
-  min-height: 300px;
 }
 
 table {
@@ -65,17 +54,13 @@ td {
   padding: 10px;
 }
 
-div#publications img {
-  width: auto;
-  height: 200px;
-}
 @media screen and (max-width: 4000px) {
     .container { 
        width: 90%;
      }
      
      nav {
-       background-color:#782F40;
+       background-color:#2c7578;
        width: 100%;
        text-align: center;
        top: 0;
@@ -94,54 +79,8 @@ div#publications img {
      }
 
      nav a:hover {
-       background-color: #CEB888;
-       color: black;
-     }
-
-     .dropdown {
-         float: left;
-     }
-
-     .dropdown .dropbtn {  
-       border: none;
-       outline: none;
-       color: white;
-       padding: 20px;
-       font-size: inherit;
-       font-family: 'Roboto', sans-serif;
-       background-color: inherit;
-       margin: 0;
-     }
-
-     nav a:hover, .dropdown:hover .dropbtn {
-       background-color: #CEB888;
-       color: #2C2A29;
-     }
-
-     .dropdown-content {
-       display: none;
-       position: absolute;
-       background-color: #782F40;
-       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-       z-index: 1;
-     }
-
-     .dropdown-content a {
-       float: none;
-       color: white;
-       padding: 12px 16px;
-       text-decoration: none;
-       display: block;
-       text-align: left;
-     }
-
-     .dropdown-content a:hover {
-       background-color: #CEB888;
-     }
-
-     .dropdown:hover .dropdown-content {
-       display: block;
-     }
+       background-color: #782f2c;
+     } 
      
      h1{
         font-size:48px;
@@ -165,7 +104,7 @@ div#publications img {
         font-size:36px;
     }
 
-    h2 {
+    h2 
         font-size:24px;
     }
 
@@ -177,10 +116,6 @@ div#publications img {
         width:70px;
         font-size:0.9em;
         padding:20px;
-      }
-      
-    .dropdown .dropbtn {  
-        font-size: 0.9em;
       }
       
     table,tr,td {
@@ -209,36 +144,6 @@ div#publications img {
         width:100%;
         font-size:0.7em;
         padding:10px;
-    }
-    
-    .dropdown {
-      float:none;
-      indent: 10px;
-    }
-    
-    .dropdown .dropbtn {  
-      border: none;
-      outline: none;
-      width: 100%;
-      color: white;
-      font-size: 0.7em;
-      font-family: 'Roboto', sans-serif;
-      background-color: inherit;
-      text-align: center;
-      margin: 0;
-    }
-    
-    .dropdown-content {
-      width: 100%
-    }
-    
-    .dropdown-content a {
-      float: none;
-      color: white;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: center;
     }
 
     header {
